<resources>

    <string name="app_name">青蛙卫士</string>
    <string name="exit_tips">再按一次退出青蛙卫士</string>
    <string name="operate_prompt">操作提示</string>
    <string name="upgrade_now">立即更新</string>
    <string name="upgrade_later">以后再说</string>
    <string name="find_new_version">发现新版本</string>
    <string name="current_version_tips">当前版本：</string>
    <string name="new_version_tips">最新版本：</string>
    <string name="whether_upgrade_tips">是否升级到新版本？</string>
    <string name="sdcard_not_enough">SD卡存储空间不足</string>
    <string name="change_applockpwd">修改程序锁密码</string>
    <string name="please_input_applockpwd">请输入程序锁密码</string>
    <string name="update">修改</string>
    <string name="cancel">取消</string>
    <string name="setting_center">设置中心</string>
    <string name="autoupdate">自动更新</string>
    <string name="autoupdate_closed">自动更新已关闭</string>
    <string name="autoupdate_opened">自动更新已开启</string>
    <string name="applock">程序锁</string>
    <string name="applock_closed">程序锁已关闭</string>
    <string name="applock_opened">程序锁已开启</string>
    <string name="advance_tool">高级工具</string>
    <string name="onekey_shutdown">一键关机</string>
    <string name="unlock">未加锁</string>
    <string name="locked">已加锁</string>
    <string name="unlock_count">未加锁应用个数：</string>
    <string name="locked_count">已加锁应用个数：</string>

</resources>