<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frogcare="http://schemas.android.com/apk/res/com.bingoogol.frogcare"
    style="@style/match_match"
    android:background="@drawable/common_bg"
    android:orientation="vertical" >

    <TextView
        style="@style/title_top"
        android:text="@string/setting_center" />

    <ScrollView
        style="@style/match_match"
        android:scrollbars="none" >

        <LinearLayout
            style="@style/match_match"
            android:orientation="vertical" >

            <com.bingoogol.frogcare.ui.view.SettingView_
                android:id="@+id/sv_setting_autoupdate"
                style="@style/match_wrap"
                frogcare:content_off="@string/autoupdate_closed"
                frogcare:content_on="@string/autoupdate_opened"
                frogcare:title="@string/autoupdate" />

            <com.bingoogol.frogcare.ui.view.SettingView_
                android:id="@+id/sv_setting_applock"
                style="@style/match_wrap"
                frogcare:content_off="@string/applock_closed"
                frogcare:content_on="@string/applock_opened"
                frogcare:title="@string/applock" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>